src/test/deca/syntax/valid/created/floating_test2.deca
{
	float b = 4.2232;
	if (b == 4.2232){
		b = 2;
	}
	else{
		b = 4;
	}
}
