src/test/deca/syntax/invalid/created/faux54.deca
{
	while(if(2 == 1)){
		
	}
}

